--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,3 @@
-#Servidor Web
-#server.port = 8081
-
-#H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-#Datasource
-spring.datasource.url=jdbc:h2:file:~/h2db
-spring.datasource.username=h2sa
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.h2.Driver
-
-spring.profiles.active==test
+spring.profiles.active=test
 
 spring.jpa.open-in-view=false
